Refactor: Replace `java.io.File` with `java.nio.Path` throughout for modernized and enhanced Linux/Unix/Windows file support (#338, #340)