@@ -5,15 +5,14 @@ import play.mvc.Controller;
 import play.mvc.Result;
 
 import javax.inject.Singleton;
-import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 @Singleton
 public class OpenApi extends Controller {
 
     public Result specs() {
-        var path = Paths.get(Common.getBasepath() + File.separator + "jatos-api.yaml");
+        var path = Path.of(Common.getBasepath(),"jatos-api.yaml");
         if (Files.exists(path)) {
             try {
                 return ok(Files.readString(path)).as("text/yaml");
