@@ -32,10 +32,12 @@ import utils.common.ZipUtil;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
-import java.io.*;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
@@ -418,7 +420,7 @@ public class ResultStreamer {
     /**
      * Returns a file with metadata
      */
-    public File writeResultMetadata(Http.Request request, Map<String, Object> wrapObject)
+    public Path writeResultMetadata(Http.Request request, Map<String, Object> wrapObject)
             throws ForbiddenException, NotFoundException, IOException, BadRequestException {
         User signedinUser = authService.getSignedinUser();
         List<Long> crids = componentResultIdsExtractor.extract(request.body().asJson());
@@ -431,7 +433,7 @@ public class ResultStreamer {
      * Allows streaming of ComponentResults into a ZipOutputStream and on the same side can return a File containing all
      * metadata in JSON format. The content of what is written into the ZipOutputStream can be specified by a ResultsType.
      */
-    private File writeResults(List<Long> componentResultIds, User signedinUser, ZipOutputStream zipOut,
+    private Path writeResults(List<Long> componentResultIds, User signedinUser, ZipOutputStream zipOut,
             ResultType resultsType, Map<String, Object> wrapObject) throws IOException, NotFoundException, ForbiddenException {
         List<Long> studyResultIds = studyResultDao.findIdsByComponentResultIds(componentResultIds);
 
@@ -483,10 +485,10 @@ public class ResultStreamer {
         }
 
         if (resultsType == ResultType.COMBINED) {
-            ZipUtil.addFileToZip(zipOut, Paths.get(""), Paths.get("metadata.json"), metadataFile);
+            ZipUtil.addFileToZip(zipOut, Path.of(""), Path.of("metadata.json"), metadataFile);
             Files.delete(metadataFile);
         }
-        return resultsType == ResultType.METADATA_ONLY ? metadataFile.toFile(): null;
+        return resultsType == ResultType.METADATA_ONLY ? metadataFile: null;
     }
 
     private void writeStudyResults(List<Long> crids, List<Long> srids, ZipOutputStream zipOut,
@@ -553,9 +555,9 @@ public class ResultStreamer {
     }
 
     private void addFilesToZip(ZipOutputStream zipOut, Long studyResultId, Long componentResultId) throws IOException {
-        Path pathInFileSystem = Paths.get(IOUtils.getResultUploadsDir(studyResultId, componentResultId));
+        Path pathInFileSystem = IOUtils.getResultUploadsDir(studyResultId, componentResultId);
         if (Files.exists(pathInFileSystem)) {
-            Path pathInZip = Paths.get(IOUtils.getResultsPathForZip(studyResultId, componentResultId), "files");
+            Path pathInZip = Path.of(IOUtils.getResultsPathForZip(studyResultId, componentResultId), "files");
             ZipUtil.addToZip(zipOut, pathInZip, pathInFileSystem);
         }
     }
